# dai-dashboard

./: .gitignore  README.md  pyproject.toml  requirements.txt
DB/: README.md  docker-compose.yml
DB/secrets/: database.env
scrape_and_visualize/: dashboarder.py  scraper.py  settings.toml
scrape_and_visualize/dash_app/: utils.py
scrape_and_visualize/models/: database.py  pydanticmodels.py
scrape_and_visualize/services/: database.py
